--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+.text-gradient {
+  background: linear-gradient(90deg, #000000 6.23%, #575757 23.53%, #808080 43.62%, #941530 87.68%);
+  -webkit-background-clip: text;
+  color: transparent;
+  
+
+}
+
+.shadowBox{
+  box-shadow: 0px 1px 6.6px 0px #00000040;
+
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap');
+
+
+body {
+  font-family: 'Libre Franklin', sans-serif;
+}
