fix error el merge

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,18 +8,15 @@
   background: linear-gradient(90deg, #000000 0%, #575757 43%, #808080 48.62%, #941530 63.68%);
   -webkit-background-clip: text;
   color: transparent;
-  
+}
 
-}
-.shadowButton{box-shadow: 0px 1px 6.6px 0px #00000040;
-}
-.shadowBox{
+.shadowButton {
   box-shadow: 0px 1px 6.6px 0px #00000040;
-
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap');
-
+.shadowBox {
+  box-shadow: 0px 1px 6.6px 0px #00000040;
+}
 
 body {
   font-family: 'Libre Franklin', sans-serif;
